--- a/index.html
+++ b/index.html
@@ -128,11 +128,6 @@
             color: #667eea;
         }
 
-        .message-secondary {
-            background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
-            color: #f5576c;
-        }
-
         .emoji {
             font-size: 24px;
             margin-left: 8px;
@@ -154,10 +149,113 @@
             background: #5a6268;
             transform: scale(1.05);
         }
+
+        /* Reveal Page Styles */
+        .reveal-page {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+            z-index: 9999;
+            animation: fadeIn 0.5s ease;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .reveal-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            padding: 20px;
+        }
+
+        .cutie-image {
+            max-width: 400px;
+            width: 90%;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            margin-bottom: 30px;
+            animation: bounceIn 0.8s ease;
+        }
+
+        @keyframes bounceIn {
+            0% {
+                transform: scale(0.3);
+                opacity: 0;
+            }
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .reveal-text {
+            background: white;
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            max-width: 500px;
+            text-align: center;
+            animation: slideUp 0.8s ease 0.3s both;
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .reveal-text h1 {
+            color: #f5576c;
+            font-weight: bold;
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+
+        .reveal-text p {
+            color: #667eea;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 1.6;
+        }
+
+        .back-btn {
+            margin-top: 20px;
+            padding: 12px 30px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            border-radius: 15px;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .back-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
-    <div class="popup-container">
+    <div class="popup-container" id="mainPopup">
         <svg class="friendship-icon" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
             <circle cx="35" cy="40" r="15" fill="#667eea"/>
             <circle cx="65" cy="40" r="15" fill="#f5576c"/>
@@ -182,60 +280,52 @@
         <div id="messageArea"></div>
     </div>
 
+    <!-- Reveal Page -->
+    <div class="reveal-page" id="revealPage">
+        <div class="reveal-content">
+            <img src="cutie.png" alt="Cutie" class="cutie-image">
+            <div class="reveal-text">
+                <h1>Lol did you find friend above then you ?? 😂</h1>
+                <p>You r always on CB !! heheh 💜</p>
+                <button class="back-btn" onclick="goBack()">Go Back</button>
+            </div>
+        </div>
+    </div>
+
     <script>
         let cbChosen = false;
-        let goodFriendChosen = false;
 
         function chooseCB() {
             cbChosen = true;
-            showMessage('primary');
+            showMessage();
         }
 
         function chooseGoodFriend() {
-            goodFriendChosen = true;
-            cbChosen = true; // CB is ALWAYS primary
-            showMessage('secondary');
+            // Redirect to reveal page
+            document.getElementById('mainPopup').style.display = 'none';
+            document.getElementById('revealPage').style.display = 'block';
         }
 
-        function showMessage(type) {
+        function showMessage() {
             const messageArea = document.getElementById('messageArea');
-            
-            if (type === 'primary') {
-                if (!goodFriendChosen) {
-                    messageArea.innerHTML = `
-                        <div class="message-primary">
-                            CB is primary <span class="emoji">🫡</span>
-                            <br><small style="margin-top: 8px; display: block;">Loyalty level: Maximum 💯</small>
-                            <button class="reset-btn" onclick="reset()">Reset Choices</button>
-                        </div>
-                    `;
-                } else {
-                    messageArea.innerHTML = `
-                        <div class="message-primary">
-                            CB alone but loyal forever <span class="emoji">💫</span>
-                            <br><small style="margin-top: 8px; display: block;">Good Friend dismissed 👋</small>
-                            <button class="reset-btn" onclick="reset()">Reset Choices</button>
-                        </div>
-                    `;
-                    goodFriendChosen = false;
-                }
-            } else if (type === 'secondary') {
-                messageArea.innerHTML = `
-                    <div class="message-secondary">
-                        Good Friend added as secondary <span class="emoji">👯‍♂️</span>
-                        <br>but CB remains primary <span class="emoji">💪</span>
-                        <br><small style="margin-top: 8px; display: block;">The hierarchy is clear! 📊</small>
-                        <button class="reset-btn" onclick="reset()">Reset Choices</button>
-                    </div>
-                `;
-            }
+            messageArea.innerHTML = `
+                <div class="message-primary">
+                    CB is primary <span class="emoji">🫡</span>
+                    <br><small style="margin-top: 8px; display: block;">Loyalty level: Maximum 💯</small>
+                    <button class="reset-btn" onclick="reset()">Reset Choices</button>
+                </div>
+            `;
         }
 
         function reset() {
             cbChosen = false;
-            goodFriendChosen = false;
             const messageArea = document.getElementById('messageArea');
             messageArea.innerHTML = '';
+        }
+
+        function goBack() {
+            document.getElementById('revealPage').style.display = 'none';
+            document.getElementById('mainPopup').style.display = 'block';
         }
     </script>
 </body>
