--- a/index.html
+++ b/index.html
@@ -28,6 +28,47 @@
             animation: popIn 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         }
 
+        /* Mobile Responsive */
+        @media (max-width: 768px) {
+            .popup-container {
+                padding: 30px 20px;
+                max-width: 95%;
+            }
+
+            h2 {
+                font-size: 24px;
+            }
+
+            .friendship-icon {
+                width: 100px;
+                height: 100px;
+            }
+
+            .btn-custom {
+                padding: 12px;
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .popup-container {
+                padding: 25px 15px;
+            }
+
+            h2 {
+                font-size: 20px;
+            }
+
+            .subtitle {
+                font-size: 12px;
+            }
+
+            .friendship-icon {
+                width: 80px;
+                height: 80px;
+            }
+        }
+
         @keyframes popIn {
             0% {
                 transform: scale(0.5);
