--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <path d="M 62 45 Q 64 48, 66 45" stroke="white" stroke-width="2" fill="none" stroke-linecap="round"/>
         </svg>
 
-        <h2>Friendship Selector 3000™</h2>
+        <h2>Find ur Good friend 🌚</h2>
         <p class="subtitle">Choose wisely... or don't, CB wins anyway 😎</p>
 
         <button class="btn-custom btn-cb" onclick="chooseCB()">
