--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <img src="cutie.png" alt="Cutie" class="cutie-image">
             <div class="reveal-text">
                 <h1>Lol did you find friend above then you ?? 😂</h1>
-                <p>Hehehe !! You r always on above -> mine CB !! 💜</p>
+                <p>Hehehe !! You r always on above -> mine CB soon !! 🌚💜</p>
                 <button class="back-btn" onclick="goBack()">Go Back</button>
             </div>
         </div>
